# EigenLlama

./: .gitignore  .gitmodules  README.md  setup.py
core/: CMakeLists.txt  LLMEngine.cpp
model/: engine.py  layers.py  main.py
tinyllama_engine.egg-info/: PKG-INFO  SOURCES.txt
tools/: huggingface_hub_download.py
